--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
       <nav>
         <div class="navBar">
           <section class="navBarIcon">
-            <a href="#"><img src="./images/navbar/apple-icon.png"></a>
+            <a href="#"><img src="apple-icon.png"></a>
           </section><section class="navBarIcon">
-            <a href="#"><img src="./images/navbar/mac.png"></a>
+            <a href="#"><img src="mac.png"></a>
           </section><section class="navBarIcon">
-            <a href="#"><img src="./images/navbar/ipad.png"></a>
+            <a href="#"><img src="ipad.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src="./images/navbar/iphone.png"></a>
+	    <a href="#"><img src="iphone.png"></a>
           </section><section class="navBarIcon">
-      	    <a href="#"><img src="./images/navbar/watch.png"></a>
+      	    <a href="#"><img src="watch.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src="./images/navbar/tv.png"></a>
+	    <a href="#"><img src=".tv.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src="./images/navbar/music.png"></a>
+	    <a href="#"><img src="music.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src="./images/navbar/support.png"></a>
+	    <a href="#"><img src="support.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src="./images/navbar/search.png"></a>
+	    <a href="#"><img src="search.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src="./images/navbar/shop.png"></a>
+	    <a href="#"><img src="shop.png"></a>
           </section>
         </div>
       </nav>
     </header>
     <div class="mainPage">
       <section class="iPhone6sFoto">
-        <img src="./images/iphone-6s-change_large.jpg">
+        <img src="iphone-6s-change_large.jpg">
       </section><section class="iPhone6sText">
         <section>
-          <img src="./images/iphone_6s_large.png">
+          <img src="iphone_6s_large.png">
         </section>
         <section>
           <p id="aPhrase">The only thing that's changed<br> is everything.</p>
