--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <div calss="helper2">
           <p>Copyright<small>&copy; </small>2016 Apple Inc. All rights reserved. <span id="privacy">Privacy Policy</span> <span id="termsOfUse">Terms of Use</span> <span id="sale">
-          Sales and Refunds</span> <span class="siteMap">Site Map</span> <small class="us-flag"><img src="./images/usa.png">United States</small></p>
+          Sales and Refunds</span> <span class="siteMap">Site Map</span> <small class="us-flag"><img src="usa.png">United States</small></p>
         </div>
       </div>
     </footer>
