--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </section><section class="navBarIcon">
       	    <a href="#"><img src="watch.png"></a>
           </section><section class="navBarIcon">
-	    <a href="#"><img src=".tv.png"></a>
+	    <a href="#"><img src="tv.png"></a>
           </section><section class="navBarIcon">
 	    <a href="#"><img src="music.png"></a>
           </section><section class="navBarIcon">
